--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 decorator==5.2.1
 Django==5.2.8
 django-environ==0.12.0
+djangorestframework==3.16.1
 executing==2.2.1
 ipython==9.7.0
 ipython_pygments_lexers==1.1.1
