--- a/requirements.txt
+++ b/requirements.txt
@@ -11,13 +11,17 @@ ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 matplotlib-inline==0.2.1
 parso==0.8.5
+pexpect==4.9.0
 pillow==12.0.0
 prompt_toolkit==3.0.52
+psycopg==3.2.13
+ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.2
 python-dotenv==1.2.1
 sqlparse==0.5.3
 stack-data==0.6.3
 traitlets==5.14.3
+typing_extensions==4.15.0
 tzdata==2025.2
 wcwidth==0.2.14
